--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-    <link rel="icon" type="img/logo_.png" href="img/fire.gif" sizes="128x128">
+    <link rel="icon" type="img/fire.gif" href="img/fire.gif" sizes="128x128">
   </head>
 
   <style>
