--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nanum+Pen+Script"> 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="icon" type="img/Fire.gif" href="img/Fire.gif" sizes="128x128">
   </head>
 
   <style>
-    body,h1 {font-family: "Lato", sans-serif}
+    body,h1 {font-family: "Nanum+Pen+Script", sans-serif}
     body, html {height: 100%}
     .bgimg {
     background-image: url(img/coming_4.jpg);
