--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   </head>
 
   <style>
-    body,h1 {font-family: "Nanum Pen Script", sans-serif}
+    body {font-family: "Lato", sans-serif}
+    h1 {font-family: "Nanum Pen Script", sans-serif}
     body, html {height: 100%}
     .bgimg {
     background-image: url(img/coming_4.jpg);
