--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
         A NEW JOURNEY WILL BEGIN!<br>
         º SИØШMДИ º
       </div>
+      <div class="w3-display-bottomright w3-padding-large w3-text-indigo w3-tiny">
+        CSS BY W3SCHOOLS
+      </div>
     </div>
   </body>
 </html>
