--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
         <hr class="w3-border-black" style="margin:auto;width:40%">
         <!-- Display the countdown timer in an element -->
-        <h1 class="w3-tiny w3-animate-top w3-center">BURN BABY BURN!</h1>
+        <h1 class="w3-medium w3-animate-top w3-center">BURN BABY BURN!</h1>
         <p id="demo" class="w3-medium w3-animate-top"></p>
 
         <script>
