--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
               <br>
               <p1 class="fa-pull-right"> <i class="fa fa-paw w3-margin-right w3-large"></i>
                 <b /><a href ="https://www.w3schools.com/w3css/default.asp" target="_blank" style="text-decoration: none">Powered by w3.css</a>
-              </p1><br><br>
+              </p1><br>
             </div>
-          </div>
+          </div><br>
         </div>
 
         <!-- education -->
