--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <p1> <i class="fa fa-facebook-official w3-margin-right w3-large"></i>
                 <b /><a href ="https://kmi.tl/ojK1L" target="_blank" style="text-decoration: none">Rogers Jones</a>
               </p1>
-              <p class="w3-margin-left"> <i class="fa fa-instagram w3-margin-right w3-large"></i>
+              <p> <i class="fa fa-instagram w3-margin-right w3-large"></i>
                 <b /><a href="https://kmi.tl/XbUAq" target="_blank" style="text-decoration: none">rogersthehuman</a>
               </p>
               <hr>
